Dropdown Visibility Fix
Dropdowns are now visible again

--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,64 @@
-body
-{
-    width: 100%; 
-    height: 100%; 
-    background-color: rgba(0, 0, 0, 0.3); 
-    padding: 0; 
-    margin: 0;
-    overflow: hidden;
-    -webkit-app-region:drag;
-}
-ph-window
-{
-    background-color: rgba(0, 0, 0, 0.3) !important;
+body {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  -webkit-app-region: drag;
 }
 
-.loom-tool-selector
-{
-    border-radius: 4.5px !important;
+ph-window {
+  background-color: rgba(0, 0, 0, 0.3) !important;
 }
 
-.loom-target-options
-{
-    display: inline-block;
-    margin-right: 5px;
+.loom-tool-selector {
+  border-radius: 4.5px !important;
 }
 
-.loom-target-options input, .loom-target-options select
-{
-    font: -webkit-mini-control;
+.loom-target-options {
+  display: inline-block;
+  margin-right: 5px;
 }
 
-.loom-target-options input
-{
-    padding: 7px !important;
-    margin: 6px !important;
-    color: #333 !important;
-    width: 100px !important;
-    font-size: 12px !important;
+.loom-target-options input,
+.loom-target-options select {
+  font: -webkit-mini-control;
 }
 
-.loom-target-options .remove
-{
-    font-size: 12px !important;
-    color: #c52121; 
+.loom-target-options input {
+  padding: 7px !important;
+  margin: 6px !important;
+  color: #333 !important;
+  width: 100px !important;
+  font-size: 12px !important;
 }
 
-#stats
-{
-    position: absolute;
-    bottom: 0;
-    font-size: 9px;
-    font-family: arial;
-    background-color: #333;
-    color: #fefefe;
-    width: 100%;
-    height: 60px;
-    -webkit-app-region: drag;
-    -webkit-user-select: none;
+.loom-target-options .remove {
+  font-size: 12px !important;
+  color: #c52121;
 }
+
+#stats {
+  position: absolute;
+  bottom: 0;
+  font-size: 9px;
+  font-family: arial;
+  background-color: #333;
+  color: #fefefe;
+  width: 100%;
+  height: 60px;
+  -webkit-app-region: drag;
+  -webkit-user-select: none;
+}
+
 #stats-render,
 #stats-norender {
   max-height: 13px;
   display: inline-block;
 }
-#shape-selection
-{
+
+#shape-selection {
   color: white;
   background-color: #333;
   border-color: #333;
@@ -71,12 +66,12 @@ ph-window
   -webkit-app-region: no-drag;
   border-width: 0px;
 }
-#shape-selection:focus
-{
+
+#shape-selection:focus {
   outline: none;
 }
-#delay
-{
+
+#delay {
   height: 12px;
   border-color: #333;
   -webkit-user-select: all;
@@ -87,45 +82,49 @@ ph-window
   font-size: 10px;
   text-align: right;
 }
-canvas
-{
-    -webkit-app-region: no-drag;
+
+canvas {
+  -webkit-app-region: no-drag;
 }
-.shape
-{
-    font-size: 9px;
-    font-family: arial;
-    color: #fefefe;
-    background-color: #333;
-    border-radius: 2px;
-    padding: 1px;
-    display: none;
+
+.shape {
+  font-size: 9px;
+  font-family: arial;
+  color: #fefefe;
+  background-color: #333;
+  border-radius: 2px;
+  padding: 1px;
+  display: none;
 }
-.setting.name
-{
-    font-size: 9px;
-    border: none;
-    border-radius: 3px;
-    width: 50px;
+
+.setting {
+  color: black;
 }
-.hide
-{
-    display: none;
+
+.setting.name {
+  font-size: 9px;
+  border: none;
+  border-radius: 3px;
+  width: 50px;
 }
-select
-{
-    font-size: 9px;
+
+.hide {
+  display: none;
 }
-.showhide
-{
-    font-size: 10px;
+
+select {
+  font-size: 9px;
 }
-.fa
-{
-    color: white;
-    font-size: 10px;
+
+.showhide {
+  font-size: 10px;
 }
-#stats .fa
-{
-    font-size: 9px;
+
+.fa {
+  color: white;
+  font-size: 10px;
+}
+
+#stats .fa {
+  font-size: 9px;
 }
